--- a/read_and_resample.ipynb
+++ b/read_and_resample.ipynb
@@ -229,17 +229,17 @@
     "    # plot examples of each class\n",
     "    fig, ax = plt.subplots(1, figsize=(8, 12))\n",
     "    print(canvas.shape)\n",
-    "    # ax.imshow(canvas.swapaxes(0, 1))  # , aspect='auto')\n",
+    "    ax.imshow(canvas.swapaxes(0, 1))  # , aspect='auto')\n",
     "    ax.imshow(canvas)\n",
     "    ax.set_title(title, fontsize=18)\n",
-    "    ax.set_xlabel(\"-- examples --\", fontsize=16)\n",
-    "    ax.set_ylabel(\"-- land classes --\", fontsize=16)\n",
+    "    ax.set_ylabel(\"-- examples --\", fontsize=16)\n",
+    "    ax.set_xlabel(\"-- land classes --\", fontsize=16)\n",
     "    # Turn off tick labels\n",
     "    if classes is None:\n",
     "        classes = clustLabels\n",
-    "    ax.set_yticks([thumbSize[0]*(0.5 + x) for x in range(nClusters)])\n",
-    "    ax.set_yticklabels(classes, fontsize=14, rotation=0)\n",
-    "    ax.set_xticklabels([])\n",
+    "    ax.set_xticks([thumbSize[0]*(0.5 + x) for x in range(nClusters)])\n",
+    "    ax.set_xticklabels(classes, fontsize=14, rotation=0)\n",
+    "    ax.set_yticklabels([])\n",
     "    plt.tight_layout()\n",
     "    # plt.axis(\"off\")\n",
     "    if save:\n",
