added confusion matrices and f1 scores

--- a/network.ipynb
+++ b/network.ipynb
@@ -1458,6 +1458,36 @@
           "execution_count": 41
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('e128 f1: city: {}, class: {}'.format(e128_city_f1, e128_class_f1))\n",
+        "print('e256 f1: city: {}, class: {}'.format(e256_city_f1, e256_class_f1))\n",
+        "print('e512 f1: city: {}, class: {}'.format(e512_city_f1, e512_class_f1))\n",
+        "print('final f1: city: {}, class: {}'.format(final_city_f1, final_class_f1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jCB1wyrbDkWd",
+        "outputId": "2384ee42-d082-42e1-a2fd-955b7d9e0697"
+      },
+      "id": "jCB1wyrbDkWd",
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "e128 f1: city: 0.7015428267423302, class: 0.3637169710941656\n",
+            "e256 f1: city: 0.6334456463912042, class: 0.3294910445114382\n",
+            "e512 f1: city: 0.6745876928533427, class: 0.4021989714488384\n",
+            "final f1: city: 0.8290477034935272, class: 0.40946976414257846\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
