--- a/network.ipynb
+++ b/network.ipynb
@@ -1062,6 +1062,7 @@
         "from sklearn.metrics import confusion_matrix\n",
         "from sklearn.metrics import f1_score\n",
         "\n",
+        "\n",
         "city_y = np.argmax(test_city, axis=1)\n",
         "class_y = np.argmax(test_class, axis=1)\n",
         "\n",
@@ -1485,6 +1486,241 @@
             "e256 f1: city: 0.6334456463912042, class: 0.3294910445114382\n",
             "e512 f1: city: 0.6745876928533427, class: 0.4021989714488384\n",
             "final f1: city: 0.8290477034935272, class: 0.40946976414257846\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "target_names = ''\n",
+        "\n",
+        "# classification_report(city_y, y_final_city_pred, target_names=target_names)\n",
+        "print(classification_report(city_y, y_e128_city_pred))\n",
+        "print(classification_report(city_y, y_e256_city_pred))\n",
+        "print(classification_report(city_y, y_e512_city_pred))\n",
+        "print(classification_report(city_y, y_final_city_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7enSQUY_INtx",
+        "outputId": "b40a3067-92e5-49bc-ac80-2538fb20ada1"
+      },
+      "id": "7enSQUY_INtx",
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.61      0.76      0.68       991\n",
+            "           1       0.70      0.91      0.79      1126\n",
+            "           2       0.92      0.61      0.73       980\n",
+            "           3       0.68      0.83      0.75      1527\n",
+            "           4       0.72      0.31      0.43      1015\n",
+            "\n",
+            "    accuracy                           0.70      5639\n",
+            "   macro avg       0.73      0.68      0.68      5639\n",
+            "weighted avg       0.72      0.70      0.69      5639\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.85      0.39      0.53       991\n",
+            "           1       0.58      0.90      0.70      1126\n",
+            "           2       0.73      0.59      0.65       980\n",
+            "           3       0.85      0.61      0.71      1527\n",
+            "           4       0.43      0.66      0.52      1015\n",
+            "\n",
+            "    accuracy                           0.63      5639\n",
+            "   macro avg       0.69      0.63      0.62      5639\n",
+            "weighted avg       0.70      0.63      0.63      5639\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.85      0.54      0.66       991\n",
+            "           1       0.73      0.68      0.71      1126\n",
+            "           2       0.57      0.82      0.68       980\n",
+            "           3       0.64      0.82      0.72      1527\n",
+            "           4       0.75      0.44      0.56      1015\n",
+            "\n",
+            "    accuracy                           0.67      5639\n",
+            "   macro avg       0.71      0.66      0.66      5639\n",
+            "weighted avg       0.70      0.67      0.67      5639\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.91      0.77      0.83       991\n",
+            "           1       0.92      0.87      0.89      1126\n",
+            "           2       0.93      0.79      0.86       980\n",
+            "           3       0.79      0.88      0.83      1527\n",
+            "           4       0.68      0.81      0.74      1015\n",
+            "\n",
+            "    accuracy                           0.83      5639\n",
+            "   macro avg       0.85      0.82      0.83      5639\n",
+            "weighted avg       0.84      0.83      0.83      5639\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classification_report(class_y, y_e128_class_pred))\n",
+        "print(classification_report(class_y, y_e256_class_pred))\n",
+        "print(classification_report(class_y, y_e512_class_pred))\n",
+        "print(classification_report(class_y, y_final_class_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9-qfFESfIkP5",
+        "outputId": "9f309c3f-8321-4fc7-e2bc-2ebde0d8c7e2"
+      },
+      "id": "9-qfFESfIkP5",
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.53      0.53      0.53      1681\n",
+            "           1       0.14      0.11      0.12        35\n",
+            "           2       0.02      0.07      0.03        28\n",
+            "           3       0.20      0.39      0.26       332\n",
+            "           4       0.17      0.13      0.15       391\n",
+            "           5       0.03      0.04      0.03        55\n",
+            "           6       0.03      0.01      0.02       139\n",
+            "           7       0.00      0.00      0.00         7\n",
+            "           8       0.00      0.00      0.00        54\n",
+            "           9       0.51      0.13      0.21       225\n",
+            "          10       0.16      0.09      0.11       171\n",
+            "          11       0.21      0.12      0.15       338\n",
+            "          12       0.00      0.00      0.00         3\n",
+            "          13       0.39      0.46      0.42      1870\n",
+            "          14       0.00      0.00      0.00        30\n",
+            "          15       0.00      0.00      0.00        91\n",
+            "          16       0.09      0.07      0.08        89\n",
+            "          17       0.31      0.10      0.15       100\n",
+            "\n",
+            "    accuracy                           0.36      5639\n",
+            "   macro avg       0.15      0.13      0.13      5639\n",
+            "weighted avg       0.36      0.36      0.35      5639\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.45      0.60      0.51      1681\n",
+            "           1       0.00      0.00      0.00        35\n",
+            "           2       0.01      0.04      0.02        28\n",
+            "           3       0.30      0.12      0.17       332\n",
+            "           4       0.17      0.07      0.10       391\n",
+            "           5       0.00      0.00      0.00        55\n",
+            "           6       0.03      0.05      0.04       139\n",
+            "           7       0.00      0.00      0.00         7\n",
+            "           8       0.00      0.00      0.00        54\n",
+            "           9       0.43      0.23      0.30       225\n",
+            "          10       0.14      0.03      0.05       171\n",
+            "          11       0.28      0.06      0.10       338\n",
+            "          12       0.00      0.00      0.00         3\n",
+            "          13       0.39      0.36      0.38      1870\n",
+            "          14       0.00      0.00      0.00        30\n",
+            "          15       0.03      0.32      0.06        91\n",
+            "          16       0.00      0.00      0.00        89\n",
+            "          17       0.40      0.02      0.04       100\n",
+            "\n",
+            "    accuracy                           0.33      5639\n",
+            "   macro avg       0.15      0.10      0.10      5639\n",
+            "weighted avg       0.34      0.33      0.32      5639\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.61      0.55      0.58      1681\n",
+            "           1       0.00      0.00      0.00        35\n",
+            "           2       0.00      0.00      0.00        28\n",
+            "           3       0.36      0.19      0.25       332\n",
+            "           4       0.20      0.19      0.20       391\n",
+            "           5       0.00      0.00      0.00        55\n",
+            "           6       0.03      0.02      0.03       139\n",
+            "           7       0.00      0.00      0.00         7\n",
+            "           8       0.00      0.00      0.00        54\n",
+            "           9       0.24      0.48      0.32       225\n",
+            "          10       0.13      0.08      0.10       171\n",
+            "          11       0.19      0.02      0.04       338\n",
+            "          12       0.00      0.00      0.00         3\n",
+            "          13       0.41      0.56      0.47      1870\n",
+            "          14       0.00      0.00      0.00        30\n",
+            "          15       0.00      0.00      0.00        91\n",
+            "          16       0.03      0.06      0.04        89\n",
+            "          17       0.17      0.31      0.22       100\n",
+            "\n",
+            "    accuracy                           0.40      5639\n",
+            "   macro avg       0.13      0.14      0.12      5639\n",
+            "weighted avg       0.38      0.40      0.38      5639\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.56      0.69      0.62      1681\n",
+            "           1       1.00      0.03      0.06        35\n",
+            "           2       0.00      0.00      0.00        28\n",
+            "           3       0.31      0.46      0.37       332\n",
+            "           4       0.23      0.55      0.32       391\n",
+            "           5       0.00      0.00      0.00        55\n",
+            "           6       0.03      0.01      0.01       139\n",
+            "           7       0.00      0.00      0.00         7\n",
+            "           8       0.03      0.02      0.02        54\n",
+            "           9       0.27      0.31      0.29       225\n",
+            "          10       0.24      0.05      0.08       171\n",
+            "          11       0.22      0.07      0.10       338\n",
+            "          12       0.00      0.00      0.00         3\n",
+            "          13       0.46      0.34      0.39      1870\n",
+            "          14       0.00      0.00      0.00        30\n",
+            "          15       0.05      0.07      0.05        91\n",
+            "          16       0.09      0.08      0.08        89\n",
+            "          17       0.45      0.19      0.27       100\n",
+            "\n",
+            "    accuracy                           0.41      5639\n",
+            "   macro avg       0.22      0.16      0.15      5639\n",
+            "weighted avg       0.40      0.41      0.39      5639\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
           ]
         }
       ]
