--- a/network.ipynb
+++ b/network.ipynb
@@ -167,17 +167,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 52,
       "metadata": {
         "id": "397d73e7"
       },
       "outputs": [],
       "source": [
         "from sklearn.preprocessing import LabelBinarizer\n",
-        "label_as_binary = LabelBinarizer()\n",
-        "\n",
-        "city_labels = label_as_binary.fit_transform(city_data)\n",
-        "class_labels = label_as_binary.fit_transform(class_data)"
+        "city_label_binarizer = LabelBinarizer()\n",
+        "city_labels = city_label_binarizer.fit_transform(city_data)\n",
+        "class_label_binarizer = LabelBinarizer()\n",
+        "class_labels = class_label_binarizer.fit_transform(class_data)"
       ],
       "id": "397d73e7"
     },
@@ -229,6 +229,73 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "city_label_binarizer.classes_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "moxouLQ0J3M1",
+        "outputId": "bedb6520-bb20-4743-e335-a2b957ff5988"
+      },
+      "id": "moxouLQ0J3M1",
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['athina, gr', 'berlin, de', 'budapest, hu', 'madrid, es',\n",
+              "       'roma, it'], dtype='<U12')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_label_binarizer.classes_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fiqkjcocKmfG",
+        "outputId": "76b2176f-a55a-433a-f27c-d58cc5b04862"
+      },
+      "id": "fiqkjcocKmfG",
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Agricultural + Semi-natural areas + Wetlands', 'Airports',\n",
+              "       'Construction sites', 'Continuous Urban Fabric (S.L.  80%)',\n",
+              "       'Discontinuous Dense Urban Fabric (S.L.  50% -  80%)',\n",
+              "       'Discontinuous Low Density Urban Fabric (S.L.  10% - 30%)',\n",
+              "       'Discontinuous Medium Density Urban Fabric (S.L.  30% - 50%)',\n",
+              "       'Discontinuous Very Low Density Urban Fabric (S.L.  10%)',\n",
+              "       'Fast transit roads and associated land', 'Forests',\n",
+              "       'Green urban areas',\n",
+              "       'Industrial, commercial, public, military and private units',\n",
+              "       'Mineral extraction and dump sites',\n",
+              "       'Other roads and associated land', 'Port areas',\n",
+              "       'Railways and associated land', 'Sports and leisure facilities',\n",
+              "       'Water bodies'], dtype='<U59')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
         }
       ]
     },
